lolspeak.BNF
<lolspeak> 	    ::=	<noun_phrase> <adverb> <verb> <noun_phrase>
<noun_phrase>	::=	<article> <adjective> <noun>
<verb>	 	    ::=	lovez  |  hatez  | ates
<noun>	 	    ::=	dawg  |  kat  |  rat
<article>	    ::=	a  | teh
<adverb> ::= accidentally| quickly| secretly
<adjective> ::= fat|hungry|happy|mean
